[project]
name = "mediprecog"
version = "1.0.0"
requires-python = ">=3.9,<3.12"
dependencies = [
    "streamlit==1.28.0",
    "pandas==2.0.3",
    "numpy==1.24.3",
    "plotly==5.17.0",
    "plotly-express==0.4.1",
    "pdfplumber==0.10.2",
    "Pillow==9.5.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"